# CaTune

./: .gitignore  .prettierignore  .readthedocs.yaml  README.md  compare_indeca_oasis.py  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  deploy.yml  publish-python.yml
.planning/: ROADMAP.md  STATE.md
.planning/phases/01-data-foundation/: 01-01-SUMMARY.md  01-02-SUMMARY.md
.planning/phases/02-wasm-solver/: 02-01-SUMMARY.md  02-02-SUMMARY.md  02-03-SUMMARY.md
.planning/phases/04-interactive-core-loop/: 04-03-SUMMARY.md
.planning/phases/05-multi-trace-and-export/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-03-PLAN.md
.planning/phases/06-tutorial-system/: 06-01-PLAN.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md
.planning/phases/08-python-companion/: 08-01-PLAN.md  08-02-PLAN.md
apps/_template/: index.html  package.json  tsconfig.json  vite.config.ts
apps/_template/src/: App.tsx
apps/admin/: index.html  package.json  tsconfig.json  vite.config.ts
apps/admin/src/: App.tsx  index.tsx
apps/cadecon/: package.json  vitest.config.ts
apps/cadecon/src/: App.tsx
apps/cala/: README.md  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.e2e.config.ts
apps/cala/e2e/: phase5-exit.e2e.test.ts  phase6-exit.e2e.test.ts  phase6-extend.e2e.test.ts  phase7-exit.e2e.test.ts
apps/cala/public/: coi-serviceworker.js
apps/cala/scripts/: verify-sab.mjs
apps/carank/: package.json  tsconfig.json  vite.config.ts
apps/catune/: .env.example  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
crates/cala-core/: Cargo.toml
crates/cala-core/pkg/: README.md  calab_cala_core.d.ts  calab_cala_core.js  calab_cala_core_bg.wasm  calab_cala_core_bg.wasm.d.ts  package.json
crates/cala-core/src/: config.rs  lib.rs
crates/cala-core/src/assets/: footprints.rs  frame.rs  groups.rs  mod.rs  suff_stats.rs  traces.rs
crates/cala-core/src/bindings/: config_json.rs  mod.rs  wasm.rs
crates/cala-core/src/buffers/: bipbuf.rs  mod.rs
crates/cala-core/src/extending/: driver.rs  merge.rs  mod.rs  mutation.rs  overlap.rs  redundancy.rs  segment.rs
crates/cala-core/src/fitting/: footprints.rs  mod.rs  pipeline.rs  residual.rs  suff_stats.rs  throttle.rs  trace_bcd.rs
crates/cala-core/src/io/: avi_uncompressed.rs  avi_writer.rs  mod.rs
crates/cala-core/src/preprocess/: band.rs  butterworth.rs  fft2d.rs  gaussian.rs  hot_pixel.rs  median.rs  mod.rs  motion.rs  pipeline.rs
crates/cala-core/tests/: assets_footprints.rs  assets_frame.rs  assets_groups.rs  assets_suff_stats.rs  assets_traces.rs  bindings_config_json.rs  buffers_bipbuf.rs  cli_smoke.rs  config_metadata.rs  extending_cold_start_e2e.rs  extending_gates.rs  extending_merge.rs  extending_mutation.rs  extending_overlap.rs  extending_rank1_nmf.rs  extending_redundancy.rs  extending_segment.rs  fitting_apply.rs  fitting_e2e.rs  fitting_footprints.rs  fitting_pipeline.rs  fitting_residual.rs  fitting_suff_stats.rs  fitting_throttle.rs  fitting_trace_bcd.rs  io_avi_uncompressed.rs  preprocess_band.rs  preprocess_butterworth.rs  preprocess_hot_pixel.rs  preprocess_motion.rs  preprocess_pipeline_e2e.rs
crates/solver/: Cargo.toml
crates/solver/pkg/: calab_solver.d.ts  calab_solver.js  calab_solver_bg.wasm  calab_solver_bg.wasm.d.ts
crates/solver/src/: banded.rs  baseline.rs  biexp_direct.rs  biexp_fit.rs  fft.rs  filter.rs  fista.rs  indeca.rs  js_indeca.rs  js_simulate.rs  kernel.rs  kernel_est.rs  lib.rs  peak_seed.rs  py_api.rs  simulate.rs  threshold.rs  upsample.rs
crates/solver/tests/: generate_fixtures.rs
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  NEW_APP.md  ROADMAP.md
python/: LICENSE  README.md  pyproject.toml
python/docs/: changelog.md  cli.md  conf.py  index.md  installation.md  quickstart.md  requirements.txt
python/docs/guides/: batch-deconvolution.md  bridge.md  cadecon.md  catune.md  loaders.md  simulation.md
python/src/calab/: __init__.py  _cli.py  _io.py  _simulate.py
python/src/calab/_bridge/: __init__.py  _apps.py  _headless.py  _models.py  _server.py
python/src/calab/_loaders/: __init__.py
python/src/catune/: __init__.py  _filter.py  _fista.py  _io.py
python/tests/: conftest.py  test_bridge.py  test_cli.py  test_cross_language.py  test_equivalence.py  test_filter.py  test_fista.py  test_headless.py  test_io.py  test_kernel.py  test_loaders.py  test_simulate.py  test_solve_trace.py
python/tests/fixtures/: README.md  fast_kinetics.json  high_lambda.json  standard_clean.json  standard_dc_offset.json  with_filter.json
scripts/: build-apps.mjs  combine-dist.mjs  test-rls.sh
src/: App.tsx  index.tsx
src/__tests__/: job-scheduler.test.ts  smoke.test.ts
src/components/: DataValidationReport.tsx  DimensionConfirmation.tsx  FileDropZone.tsx  NpzArraySelector.tsx  SamplingRateInput.tsx  TracePreview.tsx
src/lib/: ar2.ts  array-utils.ts  cell-ranking.ts  cell-solve-manager.ts  data-store.ts  export.ts  multi-cell-solver.ts  multi-cell-store.ts  npy-parser.ts  npz-parser.ts  param-config.ts  param-history.ts  solver-types.ts  supabase.ts  tuning-orchestrator.ts  types.ts  validation.ts  viz-store.ts  warm-start-cache.ts  wasm-adapter.ts  worker-pool.ts
src/styles/: cards.css  community.css  compact-header.css  controls.css  global.css  layout.css  multi-trace.css  tutorial.css
src/workers/: pool-worker.ts  solver-api.ts  solver.worker.ts
supabase/: README.md
supabase/migrations/: 001_catune_submissions.sql  001_community_submissions.sql  003_add_data_source.sql  003_analytics.sql  004_admin_role.sql  006_cadecon_submissions.sql  008_analytics_rls_lockdown.sql  009_tighten_catune_tau_constraints.sql
wasm/catune-solver/: Cargo.toml
wasm/catune-solver/pkg/: catune_solver.d.ts  catune_solver.js  catune_solver_bg.wasm  catune_solver_bg.wasm.d.ts  package.json
wasm/catune-solver/src/: fft.rs  filter.rs  fista.rs  kernel.rs  lib.rs
wasm/catune-solver/tests/: generate_fixtures.rs
(+296 files in other folders)
