[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "calab"
version = "0.2.1"
description = "CaLab: calcium imaging analysis tools — deconvolution and data preparation"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Daniel Aharoni" }]
keywords = ["calcium-imaging", "deconvolution", "neuroscience", "FISTA", "spike-inference"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed",
]
dependencies = ["numpy>=1.24", "pydantic>=2.0"]

[project.urls]
Homepage = "https://github.com/miniscope/CaLab"
Repository = "https://github.com/miniscope/CaLab"
Issues = "https://github.com/miniscope/CaLab/issues"

[project.scripts]
calab = "calab._cli:main"

[project.optional-dependencies]
loaders = ["h5py>=3.0", "zarr>=2.12"]
all = ["h5py>=3.0", "zarr>=2.12"]
dev = ["pytest>=7.0", "h5py>=3.0", "zarr>=2.12"]

[tool.maturin]
manifest-path = "../crates/solver/Cargo.toml"
features = ["pybindings"]
module-name = "calab._solver"
python-source = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
