[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "calab"
version = "0.0.0"
description = "CaLab: calcium imaging analysis tools — deconvolution and data preparation"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Daniel Aharoni" }]
keywords = ["calcium-imaging", "deconvolution", "neuroscience", "FISTA", "spike-inference"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed",
]
dependencies = ["numpy>=1.24", "pydantic>=2.0"]

[project.urls]
Homepage = "https://github.com/miniscope/CaLab"
Repository = "https://github.com/miniscope/CaLab"
Issues = "https://github.com/miniscope/CaLab/issues"
Documentation = "https://calab.readthedocs.io"

[project.scripts]
calab = "calab._cli:main"

[project.optional-dependencies]
loaders = ["h5py>=3.0", "zarr>=2.12"]
headless = ["playwright>=1.40"]
all = ["h5py>=3.0", "zarr>=2.12", "playwright>=1.40"]
docs = ["sphinx>=7.0", "sphinx-autoapi>=3.0", "myst-parser>=3.0", "furo>=2024.0"]
dev = ["pytest>=7.0", "h5py>=3.0", "zarr>=2.12", "playwright>=1.40"]

[tool.maturin]
manifest-path = "../crates/solver/Cargo.toml"
features = ["pybindings"]
module-name = "calab._solver"
python-source = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires Playwright + network access (skip with -m 'not integration')",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["docs/_build", "docs/autoapi", ".venv"]

[tool.ruff.lint]
# Pyflakes (F), pycodestyle errors (E), warnings (W), pyupgrade (UP),
# bugbear (B). Intentionally conservative — this repo has never been ruff-checked,
# so start with the essentials and tighten in a follow-up. Skipping `I` (isort)
# because the existing import style (single `from X import (a, b as _b, c)`
# blocks with `as` aliases) triggers the I001 split-per-`as` autofix, which is
# noisier than it's worth for this PR.
select = ["E", "F", "W", "UP", "B"]
ignore = [
    "E501",  # line length — formatter handles
    "UP007", # keep `Optional[X]` / `Union[X, Y]` for older pydantic-friendly code
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
# Start loose: this repo has never been type-checked. CI-2 is about getting
# mypy in the loop so future regressions don't slip through. Tighten later
# once the two noisy modules (below) are addressed.
check_untyped_defs = false
disallow_untyped_defs = false

[[tool.mypy.overrides]]
# TODO(typing): _simulate.py splats untyped dicts into typed pydantic models;
# _minian.py hits zarr's Array|Group union without narrowing. Both produce the
# bulk of the current error surface — worth a dedicated refactor PR, not
# mixed into CI hardening.
module = ["calab._simulate", "calab._loaders._minian"]
ignore_errors = true
