[package]
name = "calab-cala-core"
version = "0.1.0"
edition = "2021"
description = "Numerical core for CaLa — streaming calcium imaging demixing pipeline"

# Mirrors crates/solver wasm-opt settings so WASM binaries that ship in
# apps/cala get the same optimization surface as the solver crate.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int", "--enable-simd"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "cala-preprocess-avi"
path = "src/bin/preprocess_avi.rs"
required-features = ["native-cli"]

[[bin]]
name = "cala-concat-avi"
path = "src/bin/concat_avi.rs"
required-features = ["native-cli"]

[[bin]]
name = "cala-dump-stages-avi"
path = "src/bin/dump_stages_avi.rs"
required-features = ["native-cli"]

[features]
default = ["jsbindings"]
jsbindings = ["dep:wasm-bindgen", "dep:console_error_panic_hook", "dep:serde", "dep:serde-wasm-bindgen"]
pybindings = ["dep:pyo3", "dep:numpy", "dep:serde", "dep:serde_json"]
# Native-only dev tooling (CLI test harness for Phase 1). Gated so WASM
# and PyO3 builds don't try to compile the binary.
native-cli = []

[dependencies]
realfft = "3"
rustfft = "6"
sprs = { version = "0.11", default-features = false }
serde = { version = "1", features = ["derive"], optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
serde_json = { version = "1", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }
numpy = { version = "0.23", optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Align lint posture with crates/solver so CI expectations carry over
# when cala-core is added to the rust CI job.
[lints.clippy]
too_many_arguments = "allow"
needless_range_loop = "allow"
type_complexity = "allow"
