[package]
name = "calab-solver"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int", "--enable-simd"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["jsbindings"]
jsbindings = ["wasm-bindgen", "console_error_panic_hook", "serde", "serde-wasm-bindgen"]
pybindings = ["pyo3", "numpy", "serde", "serde_json"]

[dependencies]
realfft = "3"
rustfft = "6"
serde = { version = "1", features = ["derive"], optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
serde_json = { version = "1", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }
numpy = { version = "0.23", optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
