[package]
name = "catune-solver"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
realfft = "3"
rustfft = "6"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
